# NDCompression

./: Cargo.toml  README.md  main.py  pyproject.toml
benches/: main.rs
experiments/: experiments.txt  nd_shape.py  try_compression.py  try_constant_pattern_detection.py  try_nd_array.py  try_nd_shape.py  try_nd_shape_generator.py  try_pattern_detection.py
src/: lib.rs  nd_array.rs  nd_shape.rs
src/ndcompression/: __init__.py
src/ndcompression/_internals/: __init__.py  _nd_array.py  _nd_shape.py  _pattern.py  _shape_gen.py  _shape_generator.py
tests/: test_nd_shape.py
