[project]
name = "ndcompression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wannes Vantorre", email = "vantorrewannes@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ndcompression = "ndcompression:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
